# Automation_nation

./: .env.template  .gitignore  AI_SPRINT_FINAL_SUMMARY.md  AI_SPRINT_SYSTEM.md  CLEANUP_DOCUMENTATION.md  COLLECT_INFO_DEVELOPMENT.md  COMPREHENSIVE_TESTING_GUIDE.md  CORRECTIVE_SPRINT_PLAN.md  COVERAGE_TEST_REPORT.md  Cargo.toml  DEPENDENCY_MANAGEMENT.md  DEVELOPMENT.md  DEVELOPMENT_SETUP.md  DOCKER_BUILD_FIX.md  Dockerfile  Dockerfile.dev  Dockerfile.minimal  ENHANCED_ARCHITECTURE_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PERFORMANCE_TESTING.md  README.md  README_ENHANCED.md  RELEASE_NOTES.md  SECURITY.md  SPRINT_COMPLETION_REPORT.md  SPRINT_PLAN.md  TECHNICAL.md  TESTING.md  build_local.sh  collect_info.sh  collect_info_parallel.sh  collect_info_secure_parallel.sh  collect_info_ultra_optimized.sh  comprehensive_test_suite_enhanced.sh  create_release_pr.sh  dependency_manager.sh  dev-setup.sh  docker-compose.minimal.yml  docker-compose.yml  (+14 more)
.devcontainer/: devcontainer.json
ai_agents/: __init__.py  base_agent.py  dependency_agent.py  documentation_agent.py  license_agent.py  orchestrator.py  performance_agent.py  qa_agent.py  security_agent.py
migrations/: 20241215_001_initial_schema.sql
plugins/: 10_os_info.sh  20_hardware_info.sh  20_hardware_info_test.bats  25_virtualization_info.sh  30_ip_info.sh  31_network_stats.sh  32_lldp_neighbors.sh  40_packages_execs.sh  40_packages_execs_optimized.sh  50_uptime_info.sh  os_info_plugin_test.bats
src/: auth_handlers.rs  auth_stubs.rs  certificate_api.rs  certificate_manager.rs  container_runtime.rs  error.rs  (+24 more)
(+16 files in other folders)
