[package]
name = "automation_nation"
version = "0.1.0"
edition = "2021"
authors = ["Automation Nation Team"]
description = "Enterprise-grade automation platform with system information collection and RBAC"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
clap = { version = "4.0", features = ["derive"] }
config = "0.14"

[dev-dependencies]
tempfile = "3.0"
mockall = "0.12"

[[bin]]
name = "web_server"
path = "src/bin/web_server.rs"

[[bin]]
name = "system_profiler"
path = "src/bin/system_profiler.rs"

[[bin]]
name = "user_manager"
path = "src/bin/user_manager.rs"

[lib]
name = "automation_nation"
path = "src/lib.rs"